--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,22 @@
   background: #242F3A;
   display: flex;
   justify-content: space-between;
-  height: 7vh;
+  height: 58px;
   align-items: center;
+  
 }
 .logo{
   display: flex;
   justify-content: center;
 }
 .image{
-  width: 12vw;
-  height: 6vh;
+  Width: 
+  141.58px;
+  Height: 
+  35.01px;
   margin-top: 1vh;
-  margin-left: 2vh;
+  margin-left: 2.5vh;
+  left: 1.39%;
 }
 .loginbtn{
   width: 8vw;
@@ -39,9 +43,10 @@
   margin-right:1.5vw;
   width: 118px;
   height: 42px;
+  border: none;
 }
 .con1{
-  height: 93vh;
+  height:calc(100vh - 58px)
   
 }
 .con2{
@@ -55,7 +60,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  font-size: 2vw;
+  font-size: 2.3vw;
   line-height: 2vw;
   color: #1D1C1D;
 
@@ -86,6 +91,7 @@ color: #1D1C1D;
 
 }
 .cls4{
+  padding: 2%;
   margin-bottom: 1%;
   height: 3.7vw;
     width: 26vw;
@@ -112,6 +118,7 @@ color: #1D1C1D;
 margin-bottom: 1%;
 }
 .cls55{
+  padding: 2%;
   margin-bottom: 1%;
   margin-left: 6.7vw;
   height: 3.7vw;
@@ -163,7 +170,7 @@ color: #FF7F00;
 .cls9{
   margin-top: 2vw;
 
-  width: 28vw;
+  width: 26vw;
   
   margin-left: 6.7vw;
   background: #FF7F00;
@@ -186,7 +193,6 @@ font-weight: 400;
 font-size: 1vw;
 line-height: 20px;
 color: #9494AE;
-Width: 270px;
 Height:40px
 
 
@@ -203,7 +209,7 @@ Height:40px
 }
 .dd1{
   background: #2F80ED;
-  height: 93vh;
+  height: 92.8vh;
   
 
 }
@@ -257,7 +263,7 @@ color: #8F9BB3;
   margin-left: 1vw;
 }
 .cen1{
-  margin-top: 1.5vw;
+  margin-top: 1vw;
 }
 .s1{
   font-family: 'Poppins';
@@ -401,7 +407,7 @@ color: #9494AE;
 
 .per1{
   background: #2F80ED;
-  height: 93vh;
+  height: 92.7vh;
 }
 .pp1{
   height: 50%;
@@ -416,7 +422,7 @@ color: #9494AE;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
-font-size: 2.5vw;
+font-size: 2vw;
 line-height: 3vw;
 /* identical to box height, or 125% */
 
@@ -453,8 +459,9 @@ color: #1D1C1D;
 border: 1px solid #FF7F00;
 box-sizing: border-box;
 border-radius: 4px;
-width: 18vw;
+width: 20vw;
 height: 3vw;
+padding: 10px;
 }
 .hi5{
   font-family: 'Poppins';
@@ -468,12 +475,13 @@ line-height: 2vw;
 text-transform: uppercase;
 
 color: #FF7F00;
-margin-left: 6.9vw;
+margin-left: 8.9vw;
 margin-bottom: 3vh;
 }
 .hi6{
-  width: 18vw;
-  
+  border: none;
+  width: 20vw;
+  margin-top: 3%;
 background: #FF7F00;
 box-shadow: 0px 4px 16px rgba(221, 190, 126, 0.4);
 border-radius: 4px;
@@ -489,7 +497,7 @@ height: 3vw;
 font-style: normal;
 font-weight: 600;
 font-size: 2vw;
-line-height: 5vw;
+line-height: 4vw;
 /* or 162% */
 
 
@@ -502,7 +510,7 @@ color: #FFFFFF;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
-font-size: 2vw;
+font-size: 2.1vw;
 line-height: 4vw;
 /* or 162% */
 
@@ -533,15 +541,17 @@ line-height: 3vw;
 color: #8F9BB3;
 margin-bottom: 3vw;
 }
-/* .fm3{
-
-} */
+.fm3{
+margin-left: 61px;
+}
 .fm4{
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
-font-size: 1.5vw;
+font-size: 1vw;
 line-height: 2vw;
+margin-left: 154px;
+margin-top: 21px;
 /* identical to box height, or 133% */
 
 
@@ -550,6 +560,7 @@ text-transform: uppercase;
 color: #FF7F00;
 }
 .fm5{
+  border: none;
   width: 24vw;
 height: 3.6vw;
 left: 610px;
@@ -1230,6 +1241,7 @@ margin-bottom: 1vw;
 }
 .img111{
   margin-top: 19%;
+  height: 418px;
 }
 @media only screen and (max-width: 500px) {
 
@@ -1265,10 +1277,16 @@ margin-bottom: 1vw;
    margin-top: 1vw;
   
 }
-.s10{
-  margin-top: 1vw;
-}
 
+.s10 {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  color: #9494AE;
+margin-top: 1vw;
+}
 @media only screen and (max-width: 800px){
   .dd1{
     display: none;
@@ -1286,3 +1304,57 @@ margin-bottom: 1vw;
 .java{
   margin-left: 41px;
 }
+.css-1yo1jo6-MuiStack-root{
+  margin-left: 15px;
+}
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root{
+  background-color: white !important;
+    color: black !important;
+    /* border: 2px solid #333333; */
+
+}
+.popo{
+  Width: 250.18px;
+height: 273.85px;
+margin-left: 16%;
+}
+
+
+.gfg{
+  font-family: 'Open Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 97%;
+line-height: 20px;
+margin-top: 33%;
+/* identical to box height, or 154% */
+
+
+color: #68748b;
+}
+
+@media only screen and (max-width: 800px){
+  .per1{
+    display: none;
+  }
+  .hi{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+  }
+  
+}
+@media only screen and (max-width: 400px){
+  .registerbtn{
+    width: 86px;
+    height: 42px;
+  }
+  .loginbtn{
+    width: 86px;
+    height: 42px;
+
+  }
+}
+
