--- a/src/App.css
+++ b/src/App.css
@@ -359,7 +359,6 @@ color: #1D1C1D;
   font-size: 1vw;
   line-height: 3vw;
   /* identical to box height, or 143% */
-  margin-top: 1vw;
  
   
   
@@ -489,6 +488,7 @@ height: 3vw;
 padding: 10px;
 }
 .hi5{
+  margin-top: 5px;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
@@ -546,7 +546,7 @@ color: #FFFFFF;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
-font-size: 2.3vw;
+font-size: 2.2vw;
 line-height: 3vw;
 /* identical to box height, or 125% */
 
@@ -666,7 +666,7 @@ color: #8F9BB3;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
-font-size: 1.4vw;
+font-size: 1vw;
 line-height: 2vw;
 margin-top: 3.5vw;
 /* identical to box height, or 143% */
@@ -686,6 +686,7 @@ color: #1D1C1D;
   width: 18vw;
   height: 2.8vw; 
   margin-bottom: 1px;
+  padding-left: 4px;
 
 
 }
@@ -693,7 +694,7 @@ color: #1D1C1D;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  font-size: 1.4vw;
+  font-size: 1vw;
   line-height: 2vw;
   /* identical to box height, or 143% */
   
@@ -713,9 +714,10 @@ color: #1D1C1D;
   width: 18vw;
   height: 2.8vw; 
   margin-bottom: 10px;
-
+  padding-left: 4px;
 }
 .kg7{
+  border: none;
   width: 18vw;
   height: 2.8vw; 
   background: #FF7F00;
@@ -787,7 +789,7 @@ color: #1D1C1D;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
-font-size: 1.5vw;
+font-size: 20px;
 line-height: 2vw;
 /* identical to box height, or 140% */
 
@@ -819,6 +821,7 @@ border-radius: 4px;
 width: 70%;
 height: 3vw;
 margin-top: 2px;
+padding: 9px;
 }
 .me6{
   font-family: 'Poppins';
@@ -843,6 +846,7 @@ border-radius: 4px;
 width: 70%;
 height: 3vw;
 margin-top: 2px;
+padding: 9px;
 }
 .me8{
   font-family: 'Poppins';
@@ -866,6 +870,7 @@ border-radius: 4px;
 width: 70%;
 height: 3vw;
 margin-top: 2px;
+padding: 9px;
 }
 .me10{
   background: #FF7F00;
@@ -875,6 +880,7 @@ margin-top: 2px;
 height: 3.5vw;
 color: white;
 margin-top: 2vw;
+border: none;
 }
 .xyz{
   margin-top: 7vw;
@@ -897,12 +903,12 @@ color: #8F9BB3;
 .ren1{
   width: 100vw;
   height: 8vh;
-  background: #FAFAFD;
+  background: #E5E5E5;
 
 }
 .img99{
   margin-top: 4px;
-  margin-left: 6px;
+  margin-left: 10px;
 }
 .le{
   width: 30vw;
@@ -919,6 +925,7 @@ color: #8F9BB3;
 }
 .ct{
   margin-top: 10px;
+  background: #E5E5E5;
 }
 .ct1{
   
@@ -926,7 +933,7 @@ color: #8F9BB3;
   background: #FFFFFF;
   margin-left: 1.5vw;
   margin-right: 2vw;
-  height: 84.8vh;
+  height: 83.8vh;
   
 }
 .ct2{
@@ -936,8 +943,10 @@ color: #8F9BB3;
 
 }
 .lolo{
-  margin-left: 10vw;
+  margin-left: 7vw;
   margin-top: 3vw;
+  width: 170px;
+height: 170px;
 }
 .texi{
   margin-top: 0.9vw;
@@ -1020,13 +1029,14 @@ border-radius: 4px;
 color: white;
 margin-top: 2vw;
 height:3vw ;
+border: none;
 }
 .hee{
   margin-left: 2.4vw;
 }
 .cp{
   background: #E5E5E5;
-  height: 93vh;
+  height: 92vh;
   width: 100vw;
 
 }
@@ -1035,12 +1045,12 @@ height:3vw ;
   background: #E5E5E5;
 }
 .cp1{
-  padding-top: 3vw;
+  padding-top: 1vw;
   padding-left: 3vw;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
-font-size: 2vw;
+font-size: 1.5vw;
 line-height: 3vw;
 /* identical to box height */
 
@@ -1058,6 +1068,7 @@ font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 24px;
+margin-bottom:4px ;
 /* identical to box height, or 150% */
 
 letter-spacing: 0.25px;
@@ -1069,8 +1080,10 @@ color: #5E6367;
 }
 .cp3{
   margin-left: 3vw;
+  padding: 18px;
 }
 .cp4{
+  border: none;
   margin-left: 3vw;
   /* padding-top: 2vw;
   padding-left: 2vw; */
@@ -1094,8 +1107,8 @@ color: white;
   margin-left: 3vw;
   width: 40vw;
   background-color: white;
-  width: 50vw;
-    height: 4vw;
+  width: 56vw;
+    height: 5vw;
  
 }
 .cp7{
@@ -1122,6 +1135,7 @@ color: white;
 margin-left: 3vw;
 width: 9vw;
 height: 2.5vw;
+border: none;
 
 }
 
@@ -1161,14 +1175,17 @@ margin-left: 2vw;
 }
 .pp9{
   margin-left: 1vw;
+  width: 68px;
+height: 68px;
 }
 .pp10{
   margin-left: 1vw;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
-font-size: 1.5vw;
+font-size: 18px;
 line-height: 26px;
+
 /* identical to box height, or 144% */
 
 
@@ -1178,6 +1195,7 @@ color: #222A33;
 
 }
 .pp44{
+  margin-top:3px ;
  margin-left: 1vw;
 }
 .pp100{
@@ -1229,7 +1247,7 @@ color: #9494AE;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
-font-size: 1.5vw;
+font-size: 16px;
 line-height: 26px;
 margin-top: 1vw;
 
@@ -1245,7 +1263,7 @@ margin-bottom: 1vw;
 
 .pp323{
   margin-right: 1vw;
-  padding-bottom: 2vw;
+  padding-bottom: 2.5vw;
   
 }
 .pp90{
@@ -1400,4 +1418,123 @@ color: #68748b;
   }
   .errr{
     color: red;
+  }
+
+  .popo1{
+  Width: 250.18px;
+    height: 273.85px;
+  }
+  .bttttn{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 22px;
+/* identical to box height */
+
+text-align: center;
+
+/* Text/white */
+
+color: #FFFFFF;
+background-color:#242F3A ;
+border: 1px solid #FFFFFF;
+width: 118px;
+height: 42px;
+margin-right: 13px;
+
+
+  }
+
+  .cpcp{
+    width: 144px;
+height: 89px;
+  }
+  
+  .bbbbt{
+    background: #2F80ED;
+    height: 64px;
+
+  }
+  .fiop{
+  
+    position: absolute;
+    margin-left: 480px;
+    color: white;
+  }
+
+  .ReactModal__Content{
+    padding: 0px !important;
+
+
+  }
+  .oops{
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 26px;
+/* identical to box height, or 108% */
+
+
+color: #FFFFFF;
+margin-top: 2px;
+  }
+  .pgh{
+    
+    margin: 10px;
+    border-bottom:1px solid #E0E0E0;
+    width: 468px;
+  }
+
+  .ppf{
+  margin-left: 15px;
+  margin-bottom: 7px;
+  width: 46px;
+  height: 46px;
+  }
+  .pppf{
+    margin-left: 12px;
+    margin-bottom: 7px;
+    font-size: 14px;
+
+  }
+  .hjhj{
+    margin-top: 2px;
+    padding: 2px;
+    padding-left:10px ;
+  }
+  
+  .uiii{
+    padding-bottom: 8px;
+    border-bottom: 1px solid lightgray ;
+    
+    
+
+  }
+  .vpv{
+    margin-left: 12px;
+    
+  }
+  .bbnm{
+    width: 170px;
+    height: 50px;
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 20px;
+text-align: center;
+
+color: #000000;
+  }
+  .priyank{
+    margin-top: 8px;
+
+  }
+  .rtrr{
+    margin-left: 10px;
+  }
+  .dsdsf{
+    margin-left: 15px;
   }
