--- a/src/App.css
+++ b/src/App.css
@@ -1538,3 +1538,12 @@ color: #000000;
   .dsdsf{
     margin-left: 15px;
   }
+  .css-sghohy-MuiButtonBase-root-MuiButton-root{
+    margin-left: 100px;
+  }
+  .fdfdg{
+    margin-left: 20px;
+  }
+  .css-1yo1jo6-MuiStack-root{
+    margin-left: 25px;
+  }
