--- a/src/App.css
+++ b/src/App.css
@@ -211,7 +211,7 @@ border: none;
 }
 .cls10{
   margin-left: 6.7vw;
-  margin-top: 20vh;
+  margin-top: 28vh;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
@@ -236,6 +236,12 @@ Height:40px
   background: #2F80ED;
   height: 92.8vh;
   
+
+
+}
+.ddr1{
+  background: #2F80ED;
+  height: calc(100vh  - 57.99px)
 
 }
 .d2{
@@ -432,7 +438,13 @@ color: #9494AE;
 
 .per1{
   background: #2F80ED;
-  height: 92.7vh;
+  height: calc(100vh - 58px );
+}
+@media (max-width:993px) {
+  .per1{
+    display: none;
+  }
+  
 }
 .pp1{
   height: 50%;
@@ -635,7 +647,7 @@ color: #FFFFFF;
 }
 .kg{
   margin-top: 3.5vw;
-  margin-left: 5vw;
+  margin-left: 6vw;
   
 
 }
@@ -1108,8 +1120,8 @@ color: white;
   margin-left: 3vw;
   width: 40vw;
   background-color: white;
-  width: 56vw;
-    height: 5vw;
+  
+  height: 4vw;
  
 }
 .cp7{
@@ -1157,7 +1169,8 @@ border: none;
 }
 
 .pp2{
-  margin: 1vw;
+  box-sizing: border-box;
+  padding: 1vw;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
@@ -1336,6 +1349,9 @@ margin-top: 1vw;
   .dd1{
     display: none;
   }
+  .ddr1{
+    display: none;
+  }
 
   
   .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
@@ -1415,7 +1431,7 @@ color: #68748b;
 
 
   .fffp{
-    margin-left: 50px;
+    margin-left: 86px;
   }
   .errr{
     color: red;
@@ -1567,7 +1583,7 @@ color: #000000;
   @media only screen and (max-width: 650px){
     
     .pox{
-       margin-left: 114px;
+       margin-left: 90px;
     }
     .cls4{
   width: 36vw;
@@ -1586,8 +1602,413 @@ color: #000000;
       width: 100px;
     }
     .cls1{
-      font-size: 3.3vw;
+      font-size: 38px;
     }
+}
+
+@media only screen and (max-width: 736px){
+    
+  .s4{
+    width:39vw;
+
+  }
+  .s2{
+    width:39vw;
+
+  }
+  .s1{
+    width: 41vw;
+  }
+
+}
+
+@media only screen and (max-width: 500px){
+    
+.s11{
+  width:36vw;
+
+height: 4vw;
+}
+
+}
+
+
+.miabaap{
+  height: calc(100vh - 57.99px);
+  background: #E5E5E5;
+}
+.footere{
+  position: fixed;
+  left: 0;
+  bottom: 0.5px;
+  width: 100%;
+  color: white;
+  text-align: center;
+  background: #c4c4c4;
+
+}
+@media only screen and (max-width: 475px){
+
+  .cc132{
+    font-size: 12px;
+  }
+  .bttttn{
+    width: 85px;
+  }
+  .darrell{
+    font-size: 4.1vw;
+
+  }
+
+}
+@media only screen and (max-width: 894px){
+  .cp1{
+    font-size: 3.5vw;
+  }
+  .cp3{
+    width: 90vw;
+  }
+  .cp6{
+    width: 90vw;
+  }
+  .cp8{
+    width: 23vw;
+    height: 4.5vw;
+  }
+  .cp7{
+    font-size: 2.3vw;
+  }
+  
+
+}
+@media only screen and (max-width: 382px){
+
+  .cp8{
+  width: 34vw;
+  height: 5.5vw;
+ 
+  }
+  
+
+}
+
+@media only screen and (max-width: 800px){
+
+
+.hi1{
+  font-size: 8vw;
+} 
+.hi3{
+  font-size: 3vw;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.hi4{
+  width: 40vw;
+  height: 4vw;
+}
+.hi5{
+  margin-right: 35px;
+}
+.hi6{
+  height: 6vw;
+  width: 40vw;
+}
+.hi{
+  margin-top: 36px;
+}
+.hi2{
+  
+  margin-top: 20px;
+}
+  
+
+}
+@media only screen and (max-width: 990px){
+  .kg{
+    margin-left: 26vw;
+  }
+
+  .kg1{
+    font-size: 35px;
+    margin-top: 50px;
+  }
+  .kg2{
+    font-size: 21px;
+    margin-top: 2vw;
+  }
+  .kg3{
+    font-size: 20px;
+    margin-top: 2vw;
+    margin-bottom: 1vw;
+  }
+  .kg5{
+    font-size: 20px;
+    margin-top: 2vw;
+    margin-bottom: 1vw;
+  }
+
+  .kg4{
+    width: 50vw;
+    height: 50px;
+  }
+  .kg6{
+    width: 50vw;
+    height: 50px;
+  }
+  .kg7{
+    margin-top: 17px;
+    width: 35vw;
+    height: 33px;
+
+
+
+  }
+
+
+
+
+  
+  
+
+}
+@media only screen and (max-width: 550px){
+
+  .kg{
+    margin-left: 2vw !important;
+    margin-top: 10px;
+  }
+  .kg4{
+    width: 90vw;
+    margin-top: 10px;
+
+  }
+  .kg6{
+    width: 90vw;
+    margin-top: 10px;
+  }
+  .kg7{
+    width: 50vw;
+    margin-top: 10px;
+  }
+  .kg2{
+    margin-top: 20px;
+  }
+  .kg3{
+    margin-top: 20px;
+  }
+
+
+  
+  
+
+}
+@media only screen and (max-width: 650px){
+  .cls2{
+  font-size: 20px;
+  margin-top:19px;
+  }
+  .cls3{
+    margin-top: 18px;
+  }
+   .cls4{
+    width: 60vw;
+    height: 46px;
+   }
+   .cls55{
+    width: 60vw;
+    height: 46px;
+   }
+  
+  
+
+}
+@media only screen and (max-width: 800px){
+
+  
+  .kg2{
+    font-size: 15px;
+  }
+
+}
+@media only screen and (max-width: 430px){
+
+  .pox{
+    margin-left: 0px;
+  }
+  .cls4{
+    width: 80vw;
+  }
+  .cls55{
+    width: 80vw;
+  }
+  .cls9{
+    width: 80vw;
+  }
+  
+  
+
+}
+@media only screen and (max-width: 650px){
+  .cls1{
+    margin-top: 42px;
+    
+  }
+  .cls2{
+    margin-top: 20px;
+
+  }
+  .cls3{
+    margin-top: 10px;
+    
+  }
+  .cls4{
+    margin-top: 10px;
+    
+  }
+  .cls5{
+    margin-top: 10px;
+    
+  }
+  .cls55{
+    margin-top: 10px;
+
+  }
+  .cls9{
+    width: 60vw;
+  }
+
+
+  
+  
+
+}
+@media only screen and (max-width: 427px){
+  .cls9{
+  width: 80vw;
+
+  }
+  
+
+}
+@media only screen and (max-width: 735px){
+
+  .s4{
+    height: 48px;
+    margin-bottom: 10px;
+  }
+  .s2{
+    height: 48px;
+    margin-bottom: 10px;
+  }
+  .s3{
+    margin-bottom: 10px;
+    font-size: 15px;
+  }
+  .s1{
+    font-size: 15px;
+    margin-bottom: 10px;
+  }
+  .s44{
+    font-size: 15px;
+    margin-bottom: 10px;
+  }
+  .s6{
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  .rdiv1{
+    margin-bottom: 10px;
+    font-size: 31px;
+  }
+  .rdiv2{
+    margin-bottom: 10px;
+    font-size: 20px;
+  }
+  .s8{
+    margin-top: 10px;
+
+  }
+  .s11{
+    height: 30px;
+
+  }
+
+  
+  
+
+}
+@media only screen and (max-width: 395px){
+
+  .rdiv1{
+    font-size: 25px;
+  }
+  
+  
+
+}
+@media only screen and (max-width: 991px){
+.row{
+  display: block;
+}
+  
+  
+
+}
+@media only screen and (max-width: 450px){
+.hi2{
+  font-size: 10px;
+  margin-top: 20px;
+}
+  
+  
+
+}
+@media only screen and (max-width: 991px){
+  .fm5{
+    width:300px;
+    height: 48px;
+
+  }
+  .fm6{
+    width: 300px;
+    height: 48px;
+
+  }
+
+  
+  
+
+}
+@media only screen and (max-width: 690px){
+  .fm1{
+    font-size:6.2vw;
+    margin-top: 20px;
+  }
+  .fm2{
+    margin-top:20px ;
+    font-size: 3.4vw;
+  }
+  .fm4{
+    font-size: 2vw;
+  }
+
+
+  
+  
+
+}
+@media only screen and (max-width: 800px){
+
+  
+  
+
+}
+@media only screen and (max-width: 800px){
+
+  
+  
+
 }
 
 
