--- a/src/App.css
+++ b/src/App.css
@@ -161,8 +161,13 @@ border-radius: 4px;
 }
 .cls6{
   margin-left: 6.7vw;
-  
-  
+  /* border-radius: 10px;
+  cursor: pointer;
+position: absolute;
+width: 20px;
+
+height: 20px;
+top: 0; */
 }
 .cls7{
   
@@ -203,6 +208,7 @@ box-shadow: 0px 4px 16px rgba(221, 190, 126, 0.4);
 border-radius: 4px;
 color: white;
 border: none;
+height: 58px;
 }
 .flex1{
   display: flex;
@@ -1897,6 +1903,10 @@ height: 4vw;
     height: 48px;
     margin-bottom: 10px;
   }
+  .dewq{
+    width: 21vw;
+    height: 3vw;
+  }
   .s2{
     height: 48px;
     margin-bottom: 10px;
@@ -1998,16 +2008,113 @@ height: 4vw;
   
 
 }
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 991px){
 
+.con1{
+  display: none;
+}
+
+}
   
   
+
+
+@media only screen and (max-width: 436px){
+.cls10{
+  font-size: 2vw;
+}
+}
+@media only screen and (max-width: 991px){
+.ddr1{
+  display: none;
+}
+  
+}
+
+@media only screen and (max-width: 600px){
+  .dewq{
+    width: 36vw;
+    height: 8vw;
+  }
 
 }
 @media only screen and (max-width: 800px){
+  .texi{
+    margin-right: 62%;
 
+  }
+
+}
+@media only screen and (max-width: 700px){
+.ct1{
+  height: 64.8vh;
+}
+.ji1{
+  width: 43vw;
+}
+.savee{
+  width: 42vw;
+  height: 6vw;
+}
+
+}
   
   
+
+
+.popol{
+  margin-left: 10px;
+}
+
+@media only screen and (max-width: 800px){
+  
+  .me5{
+    width: 60vw;
+    height: 6vw;
+
+  }
+  .me7{
+    width: 60vw;
+    height: 6vw;
+
+  }
+  .me9{
+    width: 60vw;
+    height: 6vw;
+
+  }
+  .me10{
+    width: 30vw;
+    height: 4vw;
+  }
+
+}
+
+
+@media only screen and (max-width: 700px){
+  
+  .me3{
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 500px){
+
+  .me1{
+    width: 95vw;
+  }
+  .me3{
+    font-size: 20px;
+    margin-bottom: 4vw;
+  }
+  .me4{
+
+  }
+  .me6{
+
+  }
+  .me8{
+    
+  }
 
 }
 
